--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>devika singh</h1>
-    
+   <h1>heading1</h1>
+    <h2>heading2</h2>
+    <h3>heading3</h3>
+    <h4>heading4</h4>
+    <h5>heading5</h5>
+    <h6>heading6</h6>
+
+ <p>hello <I></I> </p>
+<a href="https://chromewebstore.google.com/?hl=en"
+<br>
+ <img src ="https://chromewebstore.google.com/?hl=en" alt="chrome"
 </body>
 </html>
